resolve #10 template indice noticias (#19)
* Squashed commit of the following:

commit bc0c1828e6d8d962971523ca035e6693808c0ecb
Author: Ana Carolina <carol00_10@hotmail.com>
Date:   Tue Sep 19 19:43:02 2023 -0300

    resolve #4

commit 5583dca5f53d06cd9d8e238d96bb398be1efb091
Author: Ana Carolina <carol00_10@hotmail.com>
Date:   Tue Sep 19 16:47:20 2023 -0300

    Squashed commit of the following:

    commit d27d1ed99aec6687c97d8b1149938a395949640d
    Author: Ana Carolina <carol00_10@hotmail.com>
    Date:   Tue Sep 19 16:38:00 2023 -0300

        resolve #3

* resolve #10

* arrumando css

--- a/_sass/foundation-components/_panels.scss
+++ b/_sass/foundation-components/_panels.scss
@@ -81,7 +81,7 @@ $callout-panel-link-color-hover: scale-color($callout-panel-link-color, $lightne
         p,
         li,
         dl {
-          color: $panel-font-color;
+          color: #f7c234;
         }
       }
 
